gpio: add no-frills i2c->gpio expander
commit e54f30f5c9b6f56d979e7659b168505133deaf96 from
git@git.assembla.com:cavium/WindRiver.linux.git

Simple i2c->gpio expander driven by device tree or platform data.
No interrupts, no frills, just set/get 8 pins per byte.

Added for GPIO pins integrated into i2c-accessed CPLDs
on custom embedded boards. Typically one would use
a more specialized driver if one exists, but this fallback
option is kept general to model a whole class of embedded devices.

Change-Id: Ic6e2d8a6b8843771892eaee28df97e30b8d15560
Signed-off-by: Peter Swain <pswain@cavium.com>
Signed-off-by: Yury Norov <ynorov@caviumnetworks.com>
Reviewed-on: https://sj1git1.cavium.com/16108
Reviewed-by: Sunil Kovvuri Goutham <Sunil.Goutham@cavium.com>
Tested-by: Sunil Kovvuri Goutham <Sunil.Goutham@cavium.com>
[Kevin: Just some minor context mods in order to port to linux-yocto]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/drivers/gpio/Makefile
+++ b/drivers/gpio/Makefile
@@ -59,6 +59,7 @@ obj-$(CONFIG_GPIO_GRGPIO)	+= gpio-grgpio.o
 obj-$(CONFIG_GPIO_GW_PLD)	+= gpio-gw-pld.o
 obj-$(CONFIG_GPIO_HLWD)		+= gpio-hlwd.o
 obj-$(CONFIG_HTC_EGPIO)		+= gpio-htc-egpio.o
+obj-$(CONFIG_GPIO_I2C)		+= gpio-i2c.o
 obj-$(CONFIG_GPIO_ICH)		+= gpio-ich.o
 obj-$(CONFIG_GPIO_IOP)		+= gpio-iop.o
 obj-$(CONFIG_GPIO_IXP4XX)	+= gpio-ixp4xx.o
