arch: arm64: dts: Set gpio5-pin9 as input by default
The gpio5-pin9 is used as the interrupt pin of i2c external
gpio chip, so set this pin as input by default.

Signed-off-by: Meng Li <Meng.Li@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/arch/arm64/boot/dts/renesas/ulcb-kf.dtsi
+++ b/arch/arm64/boot/dts/renesas/ulcb-kf.dtsi
@@ -205,6 +205,15 @@
 	};
 };
 
+&gpio5 {
+	gpio_exp_77_int {
+		gpio-hog;
+		gpios = <9 0>;
+		input;
+		line-name = "gpio-exp-77-int";
+	};
+};
+
 &i2c4 {
 	gpio_exp_76: gpio@76 {
 		compatible = "ti,tca9539";
