--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1020,7 +1020,7 @@ config XEN
 
 config FORCE_MAX_ZONEORDER
 	int
-	default "14" if (ARM64_64K_PAGES && TRANSPARENT_HUGEPAGE)
+	default "14" if (ARM64_64K_PAGES && (TRANSPARENT_HUGEPAGE || (ARCH_THUNDER && PREEMPT_RT_FULL)))
 	default "12" if (ARM64_16K_PAGES && TRANSPARENT_HUGEPAGE)
 	default "11"
 	help
